Fix mobile menu actions alignment

--- a/packages/_shared/assets/css/components/header.css
+++ b/packages/_shared/assets/css/components/header.css
@@ -53,7 +53,7 @@
 }
 
 .gh-head-btn:not(.gh-btn) {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     color: var(--ghost-accent-color);
 }
